# aoc-2025

./: .gitmodules  Makefile  README.md
c/: Makefile  README.md
c/include/: aoc2025.h
c/lib/: aoc2025.c  makeinc.mk
c/lib/aoc2025/: gift_shop.c  secret_entrance.c
c/spec/: aoc2025_spec.c  makeinc.mk
c/spec/aoc2025/: day_01_spec.c  day_02_spec.c
c/spec/support/: file_to_list.c  file_to_list.h  makeinc.mk
c/spec/support_spec/: file_to_list_spec.c  makeinc.mk
elixir/: Makefile  README.md  mix.exs
elixir/lib/: aoc2025.ex
elixir/lib/aoc2025/: gift_shop.ex  secret_entrance.ex
elixir/spec/: aoc2025_spec.exs
elixir/spec/aoc2025/: day_01_spec.exs  day_02_spec.exs
elixir/spec/support/: file_to_list.ex  file_to_list.exs
elixir/spec/support_spec/: file_to_list_spec.exs
go/: Makefile  README.md  go.mod
go/cmd/: dunsel.go
go/lib/: aoc2025.go  secret_entrance.go
go/spec/: aoc2025_spec.go  aoc2025_suite_test.go  file_to_list_spec.go  spec_suite_test.go
go/support/: file_to_list.go  shine.go
python/: Makefile  README.md  env.source  pyproject.toml
python/spec/: spec_helper.py
python/spec/aoc2025/: day_01_spec.py  day_02_spec.py  template.py
python/spec/support/: __init__.py  file_to_list.py
python/spec/support_spec/: file_to_list_spec.py
python/src/aoc2025/: __init__.py  gift_shop.py  secret_entrance.py
python/tests/: README.md
ruby/: Gemfile  README.md  aoc2025.gemspec
ruby/lib/: aoc2025.rb
ruby/spec/: aoc2025_spec.rb  spec_helper.rb
sphinx/: Makefile
sphinx/source/: conf.py  gift_shop.rst  index.rst  secret_entrance.rst
(+17 files in other folders)
